--- a/css/catissue_suite.css
+++ b/css/catissue_suite.css
@@ -408,7 +408,12 @@ padding-top:10px;
 	font-weight:bold;
 	color:#323232;
 }
-	
+
+.groupElements {
+	background-color:#f6f6f6;
+	border:1px solid #eeeeee;
+
+}	
 .dividerline{ 
     border-top:1px solid #ebebeb;
 }
@@ -416,12 +421,6 @@ padding-top:10px;
 	font-family:verdana;
 	border:1px solid #6E81A6; 
   font-size:11px;
-}
-
-.groupElements {
-	background-color:#f6f6f6;
-	border:1px solid #eeeeee;
-
 }
 
 div.autocomplete {
@@ -457,5 +456,21 @@ div.autocomplete {
 	  width:5em;
 	  vertical-align:middle;
 	  }
-
-	  
+.formFieldSizedText{ /* for the autocomplete tag */
+	font-family:verdana;
+	border:1px solid #6E81A6; 
+  font-size:11px;
+	width:12em;
+}
+.addRow_s{ 
+	width:11em;
+	font-family: verdana;
+	font-size: 11px;
+	color: #000000;
+	
+}
+.formFieldSized8{ 
+	font-family:verdana;
+	font-size:11px;
+	width:8em;
+}
