--- a/flexclient/dag/Components/CustomFormulaNode.mxml
+++ b/flexclient/dag/Components/CustomFormulaNode.mxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Box xmlns:mx="http://www.adobe.com/2006/mxml"  borderThickness="2" width="325" height="80"  color="black" backgroundColor="white" borderColor="#0000FF" borderStyle="solid">
+<mx:Box xmlns:mx="http://www.adobe.com/2006/mxml"  borderThickness="2"  width="325" height="80" color="black" backgroundColor="white"  
+	implements="flash.utils.IExternalizable"
+	borderColor="#0000FF" borderStyle="solid">
   <mx:Script>
   	<![CDATA[
         import mx.controls.Menu;
@@ -7,9 +9,12 @@
         import mx.controls.Alert;
         import Components.DAGConstants;
         import mx.rpc.events.ResultEvent;
-         
+        import mx.rpc.events.FaultEvent; 
   		[Bindable]
   		public var customFormula : String = null;
+  		
+  		[Bindable]
+  		public var currentCustomNode : CustomFormulaNode = null;
   		
   		[Bindable]
 		public var menuData:Array = [	
@@ -17,6 +22,29 @@
 		{label: "Delete", type: "radio", toggled: false,enabled:true}
 		
 		];
+
+        private var firstNodeName : String = "";
+        private var secondNodeName : String = "";
+          
+        private var firstNodeExpId : int = 0;
+        private var secondNodeExpId : int = 0;
+        
+        private var firstSelectedAttrName : String = "";
+        private var secondSelectedAttrName : String = ""; 
+
+        private var firstSelectedAttrId : String = "";
+        private var secondSelectedAttrId : String = "";
+        
+        private var firstSelectedAttrType : String = "";
+        private var secondSelectedAttrType : String = "";
+        
+        private var selectedArithmeticOp : String = "";
+        
+        private var selectedLogicalOp : String = "";
+
+        private var timeValue : String = null;
+        private var timeInterval : String = null; 
+
 		
   		public function initializeNode(x:int,y:int,name :String) : void
   		{
@@ -25,18 +53,213 @@
   			this.name = name; 
   		}
   		
+  		public function setFirstNodeName(firstNodeName : String) : void
+  		{
+  			this.firstNodeName = firstNodeName;
+  		}
+  		
+  		public function getFirstNodeName() : String
+  		{
+  			return this.firstNodeName;
+  		}
+  		
+  		public function setSecondNodeName(secondNodeName : String) : void
+  		{
+  		   	this.secondNodeName = secondNodeName;
+  		}
+  		public function getSecondNodeName() : String
+  		{
+  		    return this.secondNodeName;
+  		}
+  		
+  		
+  		public function setFirstNodeExpId(firstNodeExpId : int) : void
+  		{
+  			this.firstNodeExpId = firstNodeExpId;
+  		}
+  		
+  		public function getFirstNodeExpId() : int
+  		{
+  			return this.firstNodeExpId;
+  		}
+  		
+  		public function setSecondNodeExpId(secondNodeExpId : int) : void
+  		{
+  		    	this.secondNodeExpId = secondNodeExpId;
+  		}
+  		public function getSecondNodeExpId() : int
+  		{
+  			return this.secondNodeExpId;
+  		}
+  		
+  		
+  		public function setFirstSelectedAttrName(firstSelectedAttrName : String) : void
+  		{
+  			this.firstSelectedAttrName = firstSelectedAttrName;
+  		}
+  		
+  		public function getFirstSelectedAttrName() : String
+  		{
+  			return this.firstSelectedAttrName;
+  		}
+  		
+  		public function setSecondSelectedAttrName(secondSelectedAttrName : String) : void
+  		{
+  			this.secondSelectedAttrName = secondSelectedAttrName;
+  		} 
+  		 
+  		public function getSecondSelectedAttrName() : String
+  		{
+  		 	return this.secondSelectedAttrName;
+  		}
+  		 	
+  		public function setFirstSelectedAttrId(firstSelectedAttrId : String) : void
+  		{
+  			this.firstSelectedAttrId = firstSelectedAttrId;
+  		}
+  			
+  		public function getFirstSelectedAttrId() : String	
+  		{
+  		    return this.firstSelectedAttrId;	
+  		}
+  		
+  		
+  		public function setSecondSelectedAttrId(secondSelectedAttrId : String) : void
+  		{
+  		     this.secondSelectedAttrId = secondSelectedAttrId; 	
+  		}
+  		public function getSecondSelectedAttrId() : String
+  		{
+  			return this.secondSelectedAttrId;
+  		}
+  		
+  		public function setFirstSelectedAttrType(firstSelectedAttrType : String) : void
+  		{
+  			this.firstSelectedAttrType =  firstSelectedAttrType;
+  		}
+  		public function getFirstSelectedAttrType() : String
+  		{
+  			return this.firstSelectedAttrType;
+  		}
+  		
+  		
+  		public function setSecondSelectedAttrType(secondSelectedAttrType : String) : void
+  		{
+  			this.secondSelectedAttrType  = secondSelectedAttrType;
+  		} 
+  		public function getSecondSelectedAttrType() : String
+  		{
+  			return this.secondSelectedAttrType;
+  		}
+  		
+  		
+  		public function setSelectedArithmeticOp(selectedArithmeticOp : String) : void
+  		{
+  			this.selectedArithmeticOp = selectedArithmeticOp;
+  		}
+  		
+  		public function getSelectedArithmeticOp() : String
+  		{
+  			return this.selectedArithmeticOp;
+  		} 
+  		
+  		public function setSelectedLogicalOp(selectedLogicalOp : String) : void
+  		{
+  			this.selectedLogicalOp = selectedLogicalOp;
+  		} 
+  		public function getSelectedLogicalOp() : String
+  		{
+  			return this.selectedLogicalOp;
+  		}
+  		
+  		public function setTimeValue(timeValue : String) : void
+  		{
+  			this.timeValue = timeValue;
+  		}
+  		public function getTimeValue() : String
+  		{
+  			return this.timeValue;
+  		}
+  		
+  		public function setTimeInterval(timeInterval : String) : void
+  		{
+  			this.timeInterval = timeInterval;
+  		}
+  		public function getTimeInterval() : String
+  		{
+  			return this.timeInterval;
+  		}
+  		
+  		/**
+		* Read serialized data
+		*/
+		public function readExternal(input:IDataInput):void 
+		{
+			 this.name = input.readUTF();
+			 firstNodeName = input.readUTF();
+			 secondNodeName = input.readUTF();
+			 
+			 firstNodeExpId = input.readInt();
+			 secondNodeExpId = input.readInt();
+			 
+			 firstSelectedAttrName = input.readUTF();
+			 secondSelectedAttrName = input.readUTF();
+			 
+			 firstSelectedAttrId = input.readUTF();
+			 secondSelectedAttrId = input.readUTF();
+			 
+			 firstSelectedAttrType = input.readUTF();
+			 secondSelectedAttrType = input.readUTF();
+			 
+			 selectedArithmeticOp = input.readUTF();
+			 
+			 selectedLogicalOp = input.readUTF();
+			 
+			 timeValue = input.readUTF();
+			 
+			 timeInterval = input.readUTF();
+			 
+			 this.x = input.readInt();
+			 this.y = input.readInt();
+		}	
+
+        
+        /*
+           Write Searialized Data
+        */
+        public function writeExternal(out:IDataOutput):void 
+        {
+        	out.writeUTF(this.name);
+        	out.writeUTF(firstNodeName);
+        	out.writeUTF(secondNodeName);
+        	out.writeInt(firstNodeExpId);
+        	out.writeInt(secondNodeExpId);
+        	out.writeUTF(firstSelectedAttrName);
+        	out.writeUTF(secondSelectedAttrName);
+        	out.writeUTF(firstSelectedAttrId);
+        	out.writeUTF(secondSelectedAttrId);
+        	out.writeUTF(firstSelectedAttrType);
+        	out.writeUTF(secondSelectedAttrType);
+        	out.writeUTF(selectedArithmeticOp);
+        	out.writeUTF(selectedLogicalOp);
+        	out.writeUTF(timeValue);
+        	out.writeUTF(timeInterval);
+        	out.writeInt(this.x);
+        	out.writeInt(this.y);
+        }    		
+  		
+  		
+  		
   		private function createMenu(event:MouseEvent):void
   		{
   			var myMenu:Menu=null;
   			myMenu = Menu.createMenu(this, menuData, true);
   			myMenu.show(event.stageX,event.stageY);
 			myMenu.addEventListener(MenuEvent.ITEM_CLICK,handleMenuEvent);
-
   	   }
   	   
   	   private function handleMenuEvent(event:MenuEvent):void
   	   { 	
-  	   	  
   	   	  if(event.label == DAGConstants.DELETE)
   	   	  {
   	   	      //To delete the Custom Formula Node	
@@ -49,14 +272,14 @@
   	   }
   	   private function deleteCustomNode() : void
   	   {
-  	   	  rpcService.removeCustomFormula();
-          rpcService.addEventListener(ResultEvent.RESULT,nodeRemoveHandler)
+  	   	  this.parentApplication.rpcService.removeCustomFormula();
+          this.parentApplication.rpcService.addEventListener(ResultEvent.RESULT,nodeRemoveHandler)
+  	      this.parentApplication.rpcService.addEventListener(FaultEvent.FAULT, faultHandler);
   	   }
   	   private function nodeRemoveHandler(event : ResultEvent) : void
   	   {
-  	   	  
-  	   	 
   	   	  var customNodeName : String = this.name; 
+  	   	  
   	   	  //Deriving line object Names which attaches the DagNode and Custom formula node
           var nodesNumbers : Array = customNodeName.split("_");
           var line1 : String = nodesNumbers[0] + "_" + customNodeName;    	   	  
@@ -67,8 +290,23 @@
   	   }
   	   private function editCustomFormula() : void
   	   {
-  	   	  Alert.show("This functionality is not yet Supported");
-  	   } 
+			var node : CustomFormulaNode = this;
+			currentCustomNode = node;
+			this.parentApplication.rpcService.retrieveEditQueryData(node);
+			this.parentApplication.rpcService.removeEventListener(ResultEvent.RESULT,nodeRemoveHandler);
+			this.parentApplication.rpcService.addEventListener(ResultEvent.RESULT,editNodeHandler);  
+			this.parentApplication.rpcService.addEventListener(FaultEvent.FAULT, faultHandler);  	   
+  	   }
+  	  private function faultHandler (event:FaultEvent):void
+	  {
+		  Alert.show(event.fault.faultString, 'Error');
+	  }
+  	   
+  	   private function editNodeHandler(event : ResultEvent) : void
+  	   {
+  	   	  this.parentApplication.rpcService.removeEventListener(ResultEvent.RESULT,editNodeHandler);
+  	   	  this.parentApplication.createAndPopulate(event.result as Object, "edit", currentCustomNode);
+  	   }
   	]]>
   </mx:Script>
  
