--- a/css/catissue_suite.css
+++ b/css/catissue_suite.css
@@ -39,8 +39,8 @@ body {
 .blue_ar_c {
 	font-family: verdana;
 	font-size: 12px;
-	color: #6e6d6d;
-	font-weight: bold;
+	color: #000000;
+	/*font-weight: bold;*/
 }
 
 .black_ar_s {
